--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            vedura portfolio
+            vedura portfolio website
         </title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
