--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>
-        Contact
+        Contact - Form
     </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
