--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="image-container">
             <img id="banner-image" src="Vedura.jpeg" alt="vedura">
             <div class="banner-title">Hi,I'm PonVedura.S.S</div>
-            <div class="banner-subtitle">I'm a FullStack Developer</div>
+            <div class="banner-subtitle">I'm a Front End Developer</div>
         </div>
         
         
